objects/House__c.object
<CustomObject>
    <description>This is an object for House. This is a sample change #273.</description>
    <label>House</label>
    <nameField>
        <label>House Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Houses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Checkbox_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a Checkbox Field with update 11</description>
        <label>Checkbox Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Change 18</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>single home</fullName>
                </value>
                <value>
                    <fullName>multi home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Change__c</fullName>
        <description>This is a sample field change - 13</description>
        <label>Sample Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <description>Test change in Prod 20.</description>
        <label>Bedrooms</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>